Fixed overview reload. Excluded outdated plans from overview.